include pug-awesome function

--- a/src/include/include.pug
+++ b/src/include/include.pug
@@ -1,9 +1,7 @@
 doctype html 
 html 
-  head 
-    title Include is quite powerful 
+  include head
   body 
     h1 CodeTap is awsome 
     p start playing with pug to up your coding skills 
-  footer 
-    &copy; 2018 - My Awesome website 
+  include footer
