--- a/src/extends/whatever.pug
+++ b/src/extends/whatever.pug
@@ -2,10 +2,11 @@ doctype html
 html
   head
     title This is home
+    style. 
+      menu-link {
+        padding: 1 rem 2 rem;
+      }
   body
-    //- include menu 
-    .menu 
-      a.menu-link(href="/extends") home
+    include menu
     block unique-content
-    footer 
-      | &copy; 2018
+    include footer
